# forgetmenot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: setup_infra.sh
src/forgetmenot/: __init__.py  config.py
src/forgetmenot/api/: README.md  schemas.py  server.py
src/forgetmenot/api/routes/: health.py  memories.py
src/forgetmenot/core/: README.md  archive.py  dedup.py  engine_registry.py  memory_engine.py
src/forgetmenot/engines/: README.md  base.py  conversation.py
src/forgetmenot/mcp/: README.md  server.py
src/forgetmenot/models/: artifact.py  conversation.py  memory.py
tests/: test_engines.py  test_integration.py
