[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgetmenot"
version = "0.1.0"
description = "Persistent AI memory service with pluggable source engines"
requires-python = ">=3.12"
dependencies = [
    "mem0ai",
    "fastapi",
    "uvicorn[standard]",
    "mcp[cli]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic-settings",
    "httpx",
    "ollama",
    "neo4j",
    "langchain-neo4j",
    "rank-bm25",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forgetmenot"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
